--- a/.github/workflows/build-module.yml
+++ b/.github/workflows/build-module.yml
@@ -81,19 +81,19 @@ jobs:
 
       - name: Build AmneziaWG
         run: |
-          VERMAGIC=`cat ./build_dir/target-*/linux-*/linux-*/.vermagic`
-          echo "Vermagic: $VERMAGIC"
-
-          VERMAGIC_EXPECTED=${{ matrix.build_env.vermagic }}
-
-          if [ "$VERMAGIC" != "$VERMAGIC_EXPECTED" ]; then
-            echo Vermagic mismatch: $VERMAGIC, expected $VERMAGIC_EXPECTED
-            exit 1
-          fi
+#          VERMAGIC=`cat ./build_dir/target-*/linux-*/linux-*/.vermagic`
+#          echo "Vermagic: $VERMAGIC"
+#
+#          VERMAGIC_EXPECTED=${{ matrix.build_env.vermagic }}
+#
+#          if [ "$VERMAGIC" != "$VERMAGIC_EXPECTED" ]; then
+#            echo Vermagic mismatch: $VERMAGIC, expected $VERMAGIC_EXPECTED
+#            exit 1
+#          fi
 
           # Ignore kmod build for some targets, replace with the awg-go
-          make package/kmod-amneziawg/{clean,download,prepare} V=s || true
-          make package/kmod-amneziawg/compile V=s || true
+#          make package/kmod-amneziawg/{clean,download,prepare} V=s || true
+#          make package/kmod-amneziawg/compile V=s || true
 
           make package/luci-app-amneziawg/{clean,download,prepare}
           make package/luci-app-amneziawg/compile V=s
