--- a/.github/workflows/build-module.yml
+++ b/.github/workflows/build-module.yml
@@ -38,6 +38,7 @@ jobs:
 
       - name: Build AmneziaWG
         run: |
+          sudo apt-get install python3 python3-distutils-extra
           make package/luci-app-amneziawg/{clean,download,prepare}
           make package/luci-app-amneziawg/compile V=s
 
